<resources>
    <string name="app_name">Feelings</string>
    <string name="name_edit">Name</string>
    <string name="mood_button">Mood</string>
    <string name="feeling"></string>
    <string-array name= "moods">
        <item> happy </item>
        <item> sad </item>
        <item> angry </item>
        <item> confused </item>
    </string-array>
    <string name="toggle_on">positive</string>
    <string name="toggle_off">negative</string>
    <string name="meditate_switch">Meditate</string>
    <string name="yoga">Yoga</string>
    <string name="yoga1_radio">Yin</string>
    <string name="yoga2_radio">Bikram</string>
    <string name="yoga3_radio">Hatha</string>
    <string name="conservative_check">Conservative</string>
    <string name="sarcastic_check">Sarcastic</string>
    <string name="secretive_check">Secretive</string>
    <string name="enlightened_check">Enlightened</string>
</resources>
